deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabby-deployment
  namespace: tab
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: tabby-deployment
  template:
    metadata:
      labels:
        app: tabby-deployment
    spec:
      containers:
        - name: back-end
          image: public.ecr.aws/s3y9k6b7/tabby:latest
          livenessProbe:
            httpGet:
              path: /ping
              port: 8082
            failureThreshold: 1
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: 8082
            failureThreshold: 8
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: 500m
#kubectl autoscale deployment tabby-deployment --cpu-percent=50 --min=2 --max=3 -n tab
