service.yaml

apiVersion: v1
kind: Service
metadata:
  name: tabby-backend-service
  namespace: tab
  labels:
    app: tabby-ser
spec:
  type: ClusterIP
  ports:
  - name: actpm
    port: 80
    targetPort: 8082
  selector:
    app: tabby-deployment
