compiled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tab
---
apiVersion: v1
kind: Service
metadata:
  name: tabby-backend-service
  namespace: tab
spec:
  ports:
  - port: 80
    targetPort: 8082
  selector:
    app: tabby-deployment
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabby-deployment
  namespace: tab
spec:
  selector:
    matchLabels:
      app: tabby-deployment
  template:
    metadata:
      labels:
        app: tabby-deployment
    spec:
      containers:
      - env:
        - name: AWS_ACCESS_KEY_ID
          value: AKIA5Y57L2I37TQ2AKEA
        - name: AWS_SECRET_ACCESS_KEY
          value: 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
        - name: TEST_ENV_VAR
          value: TEST_ENV_VAR
        - name: DB_URL
          value: jdbc:postgresql://ec2-50-17-197-184.compute-1.amazonaws.com:5432/db95mtqffp6g1d
        - name: DB_PASSWORD
          value: 93e6ec71da1d5798028cedcb596f3470887169b7631c22bd8da7eab117e74279
        - name: DB_USERNAME
          value: ohrflgkigxnbna
        - name: REDIS_HOST_URL
          value: ec2-3-229-9-175.compute-1.amazonaws.com
        - name: REDIS_PASSWORD
          value: p7eebc6d3c0a4f34799716687a4ab660cdb0dff5623c0b9a92b2043e0ea0d09b7
        - name: REDIS_PORT
          value: "31979"
        - name: SERVER_PORT
          value: "8082"
        - name: SCHEDULER_DB_URL
          value: jdbc:postgresql://ec2-54-159-107-189.compute-1.amazonaws.com:5432/daqi6dvv7o2lu5
        - name: SCHEDULER_DB_USERNAME
          value: nggnfmgccrtxit
        - name: SCHEDULER_DB_PASSWORD
          value: 20deb40cec77d6124adcc2ddbff1439239602e6af0aef24a6d6a82fa4a91eee0
        image: public.ecr.aws/s3y9k6b7/tabby:latest
        name: back-end
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: tabby-kubernetes-ingress
  namespace: tab
spec:
  rules:
  - host: api.tabber.online
    http:
      paths:
      - backend:
          service:
            name: tabby-backend-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
